src/main/java/es/uva/locomotion/parser/ModelParser.java
// Generated from ModelParser.g4 by ANTLR 4.7.2
package es.uva.locomotion.parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ModelParser extends MultiChannelBaseParser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NewLine=1, CommentOrEncoding=2, GroupDelimiter=3, GroupEndDelimiter=4, 
		Star=5, Div=6, Pow=7, Minus=8, Plus=9, Less=10, LessEqual=11, Greater=12, 
		GreaterEqual=13, Equal=14, TwoEqual=15, NotEqual=16, Exclamation=17, DataEquationOp=18, 
		StringAssignOp=19, TwoDots=20, OpenBracket=21, CloseBracket=22, OpenSquareBracket=23, 
		CloseSquareBracket=24, RightArrow=25, TwoSidesArrow=26, Comma=27, Semicolon=28, 
		VerticalBar=29, Dolar=30, At=31, Ignore=32, Except=33, Id=34, FloatingConstNumber=35, 
		FractionalConstant=36, ExponentPart=37, DigitSeq=38, StringLiteral=39, 
		StringConst=40, Whitespace=41, Backslash=42, INFO_UNIT=43, OtherCaracter=44, 
		SketchesDelimiter=45, Condition=46, Implies=47, Test_input=48, Macro=49, 
		EndMacro=50, And=51, Or=52, Delayp=53, Tabbed_array=54, Graph=55, Title=56, 
		Xaxis=57, Xlabel=58, Xdiv=59, Yaxis=60, Ylabel=61, Ydiv=62, Xmin=63, Xmax=64, 
		No_legend=65, Scale=66, Var=67, Ymin=68, Ymax=69, Line_width=70, Metada_separator=71, 
		ViewDelimier=72, Sketch_phrase=73, Sketch_version=74, Keyword=75;
	public static final int
		RULE_file = 0, RULE_model = 1, RULE_sketchesGraphsAndMetadata = 2, RULE_symbolWithDoc = 3, 
		RULE_symbolWithDocDefinition = 4, RULE_subscriptRange = 5, RULE_subscriptSequence = 6, 
		RULE_subscriptMappingList = 7, RULE_subscriptMapping = 8, RULE_equation = 9, 
		RULE_lhs = 10, RULE_subscriptCopy = 11, RULE_unchangeableConstant = 12, 
		RULE_dataEquation = 13, RULE_lookupDefinition = 14, RULE_constraint = 15, 
		RULE_realityCheck = 16, RULE_stringAssign = 17, RULE_macroDefinition = 18, 
		RULE_expr = 19, RULE_exprAllowSign = 20, RULE_call = 21, RULE_macroHeader = 22, 
		RULE_macroArguments = 23, RULE_exprList = 24, RULE_subscriptValueList = 25, 
		RULE_indexList = 26, RULE_subscript = 27, RULE_lookup = 28, RULE_lookupRange = 29, 
		RULE_lookupPointList = 30, RULE_referenceLine = 31, RULE_lookupPoint = 32, 
		RULE_constantLine = 33, RULE_constList = 34, RULE_numberList = 35, RULE_subscriptId = 36, 
		RULE_constVensim = 37, RULE_integerConst = 38, RULE_floatingConst = 39, 
		RULE_unitsDoc = 40, RULE_group = 41, RULE_graphsGroup = 42, RULE_graphs = 43, 
		RULE_graph = 44, RULE_title = 45, RULE_xaxis = 46, RULE_xlabel = 47, RULE_xdiv = 48, 
		RULE_yaxis = 49, RULE_ylabel = 50, RULE_ydiv = 51, RULE_xmin = 52, RULE_xmax = 53, 
		RULE_nolegend = 54, RULE_scale = 55, RULE_graphvar = 56, RULE_gvar = 57, 
		RULE_ymin = 58, RULE_ymax = 59, RULE_linewidthgraph = 60, RULE_metadataDivisor = 61, 
		RULE_sketches = 62, RULE_sketchesDelimiter = 63, RULE_viewInfo = 64, RULE_sketchInfo = 65, 
		RULE_versionCode = 66, RULE_viewName = 67, RULE_viewSettings = 68, RULE_viewVariables = 69, 
		RULE_arrow = 70, RULE_arrowCoordinates = 71, RULE_viewVariable = 72, RULE_visualInfo = 73, 
		RULE_typography = 74, RULE_typographyName = 75, RULE_color = 76, RULE_rgbColor = 77, 
		RULE_singleColor = 78;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "model", "sketchesGraphsAndMetadata", "symbolWithDoc", "symbolWithDocDefinition", 
			"subscriptRange", "subscriptSequence", "subscriptMappingList", "subscriptMapping", 
			"equation", "lhs", "subscriptCopy", "unchangeableConstant", "dataEquation", 
			"lookupDefinition", "constraint", "realityCheck", "stringAssign", "macroDefinition", 
			"expr", "exprAllowSign", "call", "macroHeader", "macroArguments", "exprList", 
			"subscriptValueList", "indexList", "subscript", "lookup", "lookupRange", 
			"lookupPointList", "referenceLine", "lookupPoint", "constantLine", "constList", 
			"numberList", "subscriptId", "constVensim", "integerConst", "floatingConst", 
			"unitsDoc", "group", "graphsGroup", "graphs", "graph", "title", "xaxis", 
			"xlabel", "xdiv", "yaxis", "ylabel", "ydiv", "xmin", "xmax", "nolegend", 
			"scale", "graphvar", "gvar", "ymin", "ymax", "linewidthgraph", "metadataDivisor", 
			"sketches", "sketchesDelimiter", "viewInfo", "sketchInfo", "versionCode", 
			"viewName", "viewSettings", "viewVariables", "arrow", "arrowCoordinates", 
			"viewVariable", "visualInfo", "typography", "typographyName", "color", 
			"rgbColor", "singleColor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'*'", "'/'", "'^'", "'-'", "'+'", "'<'", 
			"'<='", "'>'", "'>='", "'='", "'=='", "'<>'", "'!'", "':='", "':IS:'", 
			"':'", "'('", "')'", "'['", "']'", "'->'", "'<->'", "','", "';'", "'|'", 
			"'$'", "'@'", "':IGNORE:'", "':EXCEPT:'", null, null, null, null, null, 
			null, null, null, null, null, null, "'///---'", "':THE CONDITION:'", 
			"':IMPLIES:'", "':TEST INPUT:'", "':MACRO:'", "':END OF MACRO:'", "':AND:'", 
			"':OR:'", "'DELAYP('", "'TABBED ARRAY('", "':GRAPH'", "':TITLE'", "':X-AXIS'", 
			"':X-LABEL'", "':X-DIV'", "':Y-AXIS'", "':Y-LABEL'", "':Y-DIV'", "':X-MIN'", 
			"':X-MAX'", "':NO-LEGEND'", "':SCALE'", "':VAR'", "':Y-MIN'", "':Y-MAX'", 
			"':LINE-WIDTH'", "':L\u007F<%^E!@'", "'---///'", "'Sketch information - do not modify anything except names'", 
			"'V300  Do not put anything below this section - it will be ignored'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NewLine", "CommentOrEncoding", "GroupDelimiter", "GroupEndDelimiter", 
			"Star", "Div", "Pow", "Minus", "Plus", "Less", "LessEqual", "Greater", 
			"GreaterEqual", "Equal", "TwoEqual", "NotEqual", "Exclamation", "DataEquationOp", 
			"StringAssignOp", "TwoDots", "OpenBracket", "CloseBracket", "OpenSquareBracket", 
			"CloseSquareBracket", "RightArrow", "TwoSidesArrow", "Comma", "Semicolon", 
			"VerticalBar", "Dolar", "At", "Ignore", "Except", "Id", "FloatingConstNumber", 
			"FractionalConstant", "ExponentPart", "DigitSeq", "StringLiteral", "StringConst", 
			"Whitespace", "Backslash", "INFO_UNIT", "OtherCaracter", "SketchesDelimiter", 
			"Condition", "Implies", "Test_input", "Macro", "EndMacro", "And", "Or", 
			"Delayp", "Tabbed_array", "Graph", "Title", "Xaxis", "Xlabel", "Xdiv", 
			"Yaxis", "Ylabel", "Ydiv", "Xmin", "Xmax", "No_legend", "Scale", "Var", 
			"Ymin", "Ymax", "Line_width", "Metada_separator", "ViewDelimier", "Sketch_phrase", 
			"Sketch_version", "Keyword"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ModelParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ModelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public ModelContext model() {
			return getRuleContext(ModelContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ModelParser.EOF, 0); }
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelParserVisitor ) return ((ModelParserVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			model();
			setState(159);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelContext extends ParserRuleContext {
		public SketchesGraphsAndMetadataContext sketchesGraphsAndMetadata() {
			return getRuleContext(SketchesGraphsAndMetadataContext.class,0);
		}
		public List<SymbolWithDocContext> symbolWithDoc() {
			return getRuleContexts(SymbolWithDocContext.class);
		}
		public SymbolWithDocContext symbolWithDoc(int i) {
			return getRuleContext(SymbolWithDocContext.class,i);
		}
		public List<MacroDefinitionContext> macroDefinition() {
			return getRuleContexts(MacroDefinitionContext.class);
		}
		public MacroDefinitionContext macroDefinition(int i) {
			return getRuleContext(MacroDefinitionContext.class,i);
		}
		public List<GroupContext> group() {
			return getRuleContexts(GroupContext.class);
		}
		public GroupContext group(int i) {
			return getRuleContext(GroupContext.class,i);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelParserVisitor ) return ((ModelParserVisitor<? extends T>)visitor).visitModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			disable(ModelLexer.VIEWS);
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GroupDelimiter) | (1L << Id) | (1L << Macro))) != 0)) {
				{
				setState(165);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Id:
					{
					setState(162);
					symbolWithDoc();
					}
					break;
				case Macro:
					{
					setState(163);
					macroDefinition();
					}
					break;
				case GroupDelimiter:
					{
					setState(164);
					group();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(170);
			sketchesGraphsAndMetadata();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SketchesGraphsAndMetadataContext extends ParserRuleContext {
		public SketchesContext sketches() {
			return getRuleContext(SketchesContext.class,0);
		}
		public GraphsGroupContext graphsGroup() {
			return getRuleContext(GraphsGroupContext.class,0);
		}
		public MetadataDivisorContext metadataDivisor() {
			return getRuleContext(MetadataDivisorContext.class,0);
		}
		public SketchesGraphsAndMetadataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sketchesGraphsAndMetadata; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelParserVisitor ) return ((ModelParserVisitor<? extends T>)visitor).visitSketchesGraphsAndMetadata(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SketchesGraphsAndMetadataContext sketchesGraphsAndMetadata() throws RecognitionException {
		SketchesGraphsAndMetadataContext _localctx = new SketchesGraphsAndMetadataContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sketchesGraphsAndMetadata);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NewLine || _la==SketchesDelimiter || _la==ViewDelimier) {
				{
				setState(172);
				sketches();
				}
			}

			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Graph) {
				{
				setState(175);
				graphsGroup();
				}
			}

			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Metada_separator) {
				{
				setState(178);
				metadataDivisor();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymbolWithDocContext extends ParserRuleContext {
		public SymbolWithDocDefinitionContext symbolWithDocDefinition() {
			return getRuleContext(SymbolWithDocDefinitionContext.class,0);
		}
		public UnitsDocContext unitsDoc() {
			return getRuleContext(UnitsDocContext.class,0);
		}
		public SymbolWithDocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolWithDoc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelParserVisitor ) return ((ModelParserVisitor<? extends T>)visitor).visitSymbolWithDoc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolWithDocContext symbolWithDoc() throws RecognitionException {
		SymbolWithDocContext _localctx = new SymbolWithDocContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_symbolWithDoc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			symbolWithDocDefinition();
			setState(182);
			unitsDoc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymbolWithDocDefinitionContext extends ParserRuleContext {
		public LookupDefinitionContext lookupDefinition() {
			return getRuleContext(LookupDefinitionContext.class,0);
		}
		public SubscriptRangeContext subscriptRange() {
			return getRuleContext(SubscriptRangeContext.class,0);
		}
		public EquationContext equation() {
			return getRuleContext(EquationContext.class,0);
		}
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public UnchangeableConstantContext unchangeableConstant() {
			return getRuleContext(UnchangeableConstantContext.class,0);
		}
		public DataEquationContext dataEquation() {
			return getRuleContext(DataEquationContext.class,0);
		}
		public StringAssignContext stringAssign() {
			return getRuleContext(StringAssignContext.class,0);
		}
		public SubscriptCopyContext subscriptCopy() {
			return getRuleContext(SubscriptCopyContext.class,0);
		}
		public RealityCheckContext realityCheck() {
			return getRuleContext(RealityCheckContext.class,0);
		}
		public SymbolWithDocDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolWithDocDefinition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelParserVisitor ) return ((ModelParserVisitor<? extends T>)visitor).visitSymbolWithDocDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolWithDocDefinitionContext symbolWithDocDefinition() throws RecognitionException {
		SymbolWithDocDefinitionContext _localctx = new SymbolWithDocDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_symbolWithDocDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(184);
				lookupDefinition();
				}
				break;
			case 2:
				{
				setState(185);
				subscriptRange();
				}
				break;
			case 3:
				{
				setState(186);
				equation();
				}
				break;
			case 4:
				{
				setState(187);
				constraint();
				}
				break;
			case 5:
				{
				setState(188);
				unchangeableConstant();
				}
				break;
			case 6:
				{
				setState(189);
				dataEquation();
				}
				break;
			case 7:
				{
				setState(190);
				stringAssign();
				}
				break;
			case 8:
				{
				setState(191);
				subscriptCopy();
				}
				break;
			case 9:
				{
				setState(192);
				realityCheck();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubscriptRangeContext extends ParserRuleContext {
		public TerminalNode Id() { return getToken(ModelParser.Id, 0); }
		public TerminalNode TwoDots() { return getToken(ModelParser.TwoDots, 0); }
		public SubscriptSequenceContext subscriptSequence() {
			return getRuleContext(SubscriptSequenceContext.class,0);
		}
		public SubscriptValueListContext subscriptValueList() {
			return getRuleContext(SubscriptValueListContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public SubscriptMappingListContext subscriptMappingList() {
			return getRuleContext(SubscriptMappingListContext.class,0);
		}
		public SubscriptRangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptRange; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelParserVisitor ) return ((ModelParserVisitor<? extends T>)visitor).visitSubscriptRange(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubscriptRangeContext subscriptRange() throws RecognitionException {
		SubscriptRangeContext _localctx = new SubscriptRangeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_subscriptRange);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			match(Id);
			setState(196);
			match(TwoDots);
			setState(200);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(197);
				subscriptSequence();
				}
				break;
			case 2:
				{
				setState(198);
				subscriptValueList();
				}
				break;
			case 3:
				{
				setState(199);
				call();
				}
				break;
			}
			setState(203);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RightArrow) {
				{
				setState(202);
				subscriptMappingList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
